--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^5.3.3",
     "element-ui": "^2.6.3",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
@@ -22,6 +23,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "vue-cli-plugin-element": "^1.0.1",
